syntax = "proto3";

package me.vinsce.remote.media;

import "google/protobuf/empty.proto";
import "command.proto";

option java_package = "me.vinsce.remote.server.proto";
option java_outer_classname = "MediaProto";

service MediaService {
  rpc VolumeUp(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);
  rpc VolumeDown(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);
  rpc Mute(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);

  rpc PlayPause(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);
  // rpc play(google.protobuf.Empty) returns (GenericCommandResponse);
  // rpc pause(google.protobuf.Empty) returns (GenericCommandResponse);
  rpc Stop(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);

  rpc MediaNext(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);
  rpc MediaPrev(google.protobuf.Empty) returns (me.vinsce.remote.GenericCommandResponse);
}