syntax = "proto3";

package me.vinsce.remote.power;

import "command.proto";

option java_package = "me.vinsce.remote.server.proto";
option java_outer_classname = "PowerProto";

message PowerCommandRequest {
  enum PowerAction {
    SHUTDOWN = 0;
    RESTART = 1;
    SLEEP = 2;
  }
  PowerAction action = 1;
}

service PowerService {
  rpc PowerCommand(PowerCommandRequest) returns (me.vinsce.remote.GenericCommandResponse);
}